Fixed logo spacing on smaller screens

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ hr {
     }
     .logo {
         max-width: 80%;
+        margin: 15px auto;
     }
     h1 {
         font-size: 2em;
